--- a/styles-sm.css
+++ b/styles-sm.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: Inter;
     src: url(Inter-VariableFont_slnt,wght.ttf);
+    font-display: swap;
 }
 
 :root {
@@ -38,6 +39,7 @@ p {
 }
 
 .header-logo img {
+    height: clamp(2rem, 4vw, 3rem);
     width: 100%;
 }
 
@@ -63,6 +65,17 @@ p {
     width: 65vw;
     box-shadow: -65vw -20vw 0 0 #0007;
 }
+
+.open-menu {
+    width: 2.65rem;
+    height: 1.15rem;
+}
+
+.close-menu {
+    width: 2rem;
+    height: 2rem;
+}
+
 
 #menu-toggle-inp:checked~.menu-icon .open-menu {
     visibility: hidden;
@@ -105,7 +118,8 @@ p {
     row-gap: 20px;
 }
 
-.main-img img {
+.poster {
+    height: 80vw;
     width: 100%;
 }
 
@@ -116,12 +130,10 @@ p {
 }
 
 .read-more-button {
-    /* Button styles */
     background-color: var(--Soft-red);
     border: 0;
     padding: 1rem 2rem;
     margin: 20px 0;
-    /* font styles */
     color: var(--Off-white);
     text-transform: uppercase;
     font-size: 15px;
@@ -242,94 +254,4 @@ p {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
-}
-
-@media screen and (min-width: 768px) {
-
-    .main-container {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(3, auto);
-    }
-
-    .main-img,
-    .aside-container {
-        grid-column: 1/3;
-    }
-}
-
-@media screen and (min-width:992px) {
-    .menu-icon {
-        display: none;
-    }
-
-    .p-resp {
-        padding-left: clamp(15px, 10vw, 150px);
-        padding-right: clamp(15px, 10vw, 150px);
-    }
-
-    .nav-options {
-        position: relative;
-        right: auto;
-        top: auto;
-        width: auto;
-        height: auto;
-        box-shadow: none;
-        padding: 0;
-        display: flex;
-    }
-
-    .nav-options li a {
-        color: var(--Dark-grayish-blue);
-        padding: 0;
-        margin: clamp(10px, 1.5vw, 20px);
-    }
-
-    .nav-options li a:hover {
-        color: var(--Soft-orange);
-    }
-
-    .main-container {
-        grid-template-columns: repeat(3, auto);
-        grid-template-rows: 25vw auto;
-        column-gap: clamp(5px, 2vw, 2rem);
-        row-gap: .5rem;
-    }
-
-    .main-img {
-        grid-column: 1/3;
-        grid-row: 1/2;
-        height: fit-content;
-    }
-
-    .main-img img {
-        max-height: 22.5vw;
-    }
-
-    .aside-container {
-        grid-column: 3/4;
-        grid-row: 1/3;
-    }
-
-    .main-text {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .read-more-button {
-        margin-bottom: 0;
-    }
-
-    .aside-item {
-        padding: clamp(1rem, 2.75vw, 3rem) 0;
-    }
-
-    .footer-container {
-        margin-top: 2rem;
-        margin-bottom: 2.5rem;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        gap: auto;
-    }
 }
